name:                vincibean
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://vincibean.github.io/
license:             GPL-3.0
license-file:        LICENSE
author:              Andre Bessi
maintainer:          andrebessi00@gmail.com
copyright:           2019 Andre Bessi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable vincibean
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
